# termux-display-client

./: CMakeLists.txt  README.md  README_GPU.md  buffer.c  egl_renderer.c  main.c  main_gpu.c  render.c  syslog.c  tlog.c  wayland.c  wayland.h
inc/: LogUtil.h  SocketIPCClient.h
inc/stb_image/: stb_image.h
include/: InputEvent.h  InputEventCallback.h  InputServer.h  buffer.h  client.h  egl_renderer.h  list.h  render.h  stb_image.h  syslog.h  termuxdc_event.h  termuxdc_event_callback.h  termuxdc_server.h  tlog.h  types.h  wayland.h
include.termux.display.client/: InputEvent.h  InputServer.h  types.h
renderer/: InputEventCallback.cpp  InputServer.cpp  SocketIPCClient.cpp  buffer.c  client.cpp  main.c  main.cpp  termuxdc_event_callback.cpp  termuxdc_server.cpp
scripts/: labwc.sh  sway.sh  sway_config  tinywl.sh
